--- a/client/src/components/Map/Map.css
+++ b/client/src/components/Map/Map.css
@@ -1,24 +1,23 @@
-#map {
-  max-width: 900px;
-  max-height: 900px;
-  width: 300px;
-  height: 300px;
+#map{
+    max-width: 900px;
+    max-height: 900px;
+    height: 500px;
 }
 
 .marker {
-  background-image: url("map_icon.png");
-  background-size: cover;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  cursor: pointer;
-}
+    background-image: url('map_icon.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 
-.mapboxgl-popup {
-  max-width: 200px;
-}
-
-.mapboxgl-popup-content {
-  text-align: center;
-  font-family: "Open Sans", sans-serif;
-}
+  .mapboxgl-popup {
+    max-width: 200px;
+  }
+  
+  .mapboxgl-popup-content {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+  }
